--- a/myproject/metal/templates/registration/password_reset_form.html
+++ b/myproject/metal/templates/registration/password_reset_form.html
@@ -1,65 +1,33 @@
+{% extends "shared/main_market.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Metalpolis - Reset Password</title>
-</head>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AdminLTE 2 | Log in</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <!-- Bootstrap 3.3.7 -->
 
-<!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css"  href="{% static 'public' %}/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'public' %}/fonts/font-awesome/css/font-awesome.css">
-  <script src="{% static 'market_app' %}/js/adminlte.min.js"></script>
-    <!-- Theme style -->
-  <link rel="stylesheet" href="{% static 'market' %}/css/AdminLTE.min.css">
-  <!-- AdminLTE Skins. Choose a skin from the css/skins
-       folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="{% static 'market' %}/css/skins/_all-skins.min.css">
-  <link rel="stylesheet" href="{% static 'market/style.css' %}" >
-<!-- AdminLTE for demo purposes -->
-  <script src="{% static 'market_app' %}/js/demo.js"></script>
-<!-- Stylesheet
-    ================================================== -->
-  <link rel="stylesheet" type="text/css"  href="{% static 'public' %}/css/style.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'public' %}/css/prettyPhoto.css">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="{% static 'public' %}/js/modernizr.custom.js"></script>
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-</head>
-<body class="hold-transition login-page">
-<div class="login-box">
+{% block main_content %}
+<!-- <div class="login-box">
   <!-- /.login-logo -->
-  <div class="login-box-body">
+  <!-- <div class="login-box-body">
     <h2><p class="login-box-msg">Metalpolis - Reset Password</p></h2>
     <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-  </div>
+  </div> -->
   <!-- /.login-box-body -->
-</div>
+<div class="row justify-content-center">
+    <div class="col-lg-4 col-md-8 col-sm-4">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Reset your password</h3>
+          <p>Enter your email address and we will send you a link to reset your password.</p>
+          <form method="post" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary btn-block">Send password reset email</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 <!-- /.login-box -->
-</body>
-</html>
+{% endblock %}
+
