--- a/myproject/metal/templates/shared/navi_main.html
+++ b/myproject/metal/templates/shared/navi_main.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="" class="navbar-brand"><b>METALPOLIS</b>&nbsp;marketplace</a>
+          <a href="{% url 'public_index' %}" class="navbar-brand"><b>METALPOLIS</b>&nbsp;marketplace</a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
