--- a/myproject/metal/templates/registration/password_reset_complete.html
+++ b/myproject/metal/templates/registration/password_reset_complete.html
@@ -1,3 +1,23 @@
+{% extends "shared/main_market.html" %}
+{% load staticfiles %}
+
+{% block title %}Password changed!{% endblock %}
+{% block main_content %}
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-8 col-sm-10">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Password changed!</h3>
+          <div class="alert alert-success" role="alert">
+            You have successfully changed your password! You may now proceed to log in.
+          </div>
+          <a href="{% url 'public_index' %}" class="btn btn-secondary btn-block">Return to log in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,3 +30,4 @@
   </p>
 </body>
 </html>
+-->
