--- a/myproject/metal/templates/registration/password_reset_done.html
+++ b/myproject/metal/templates/registration/password_reset_done.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-  <p>
-    We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.
-  </p>
-  <p>
-    If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.
-  </p>
-</body>
-</html>
+{% extends "shared/main_market.html" %}
+{% load staticfiles %}
+
+{% block title %}Reset your password{% endblock %}
+
+{% block main_content %}
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-8">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Reset your password</h3>
+          <p>
+            We've emailed you instructions for setting your password, if an account exists with the email you entered.
+            You should receive them shortly.
+          </p>
+          <p>
+            If you don't receive an email, please make sure you've entered the address you registered with,
+            and check your spam folder.
+          </p>
+            <a href="{% url 'public_index' %}" class="btn btn-secondary btn-block">Return to log in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
