--- a/myproject/metal/templates/shared/footer.html
+++ b/myproject/metal/templates/shared/footer.html
@@ -2,6 +2,6 @@
   <div class="pull-right hidden-xs">
 {#    <b>Version</b> 2.4.0#}
   </div>
-  <strong>Copyright © 2017 <a href="https://adminlte.io">Metalpolis</a>.</strong> All rights
+  <strong>Copyright © 2017 <a href="{% url 'public_index' %}">Metalpolis</a>.</strong> All rights
   reserved.
 </div>
