buyer registration logic completed

--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -138,7 +138,7 @@
                                             <label>Password</label>
                                             <input id="txt_password" name="password" type="password"
                                                    class="form-control"
-                                                   data-bind="value: password, valueUpdate: 'blur'"
+                                                   data-bind="value: user_password, valueUpdate: 'blur'"
                                                    placeholder="Password to sign in later">
                                         </div>
 
