show status upon successful registration

--- a/myproject/metal/templates/register/index.html
+++ b/myproject/metal/templates/register/index.html
@@ -256,8 +256,8 @@
                 <div class="tab-pane" role="tabpanel" id="complete">
                     <div class="box-body">
 
-                        <h3>Completed</h3>
-                        <p>You have completed your registration.</p>
+                        <h3 id="status_title">Completed</h3>
+                        <p id="status_message">You have completed your registration.</p>
 
                     </div>
                 </div>
