--- a/myproject/metal/static/public/css/style.css
+++ b/myproject/metal/static/public/css/style.css
@@ -170,6 +170,7 @@ hr {
 	-o-background-size: cover;
 }
 #intro .intro-body {
+	background: rgba(1,1,1,0.7);
 	display: table-cell;
 	/*vertical-align: middle;*/
 }
@@ -595,12 +596,13 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .wrap
 {
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     min-height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 99;
+	/*border-radius: 15px;*/
 }
 
 p.form-title
