--- a/myproject/metal/static/public/css/style.css
+++ b/myproject/metal/static/public/css/style.css
@@ -612,7 +612,7 @@ p.form-title
     font-weight: 600;
     text-align: center;
     color: #FFFFFF;
-    margin-top: 5%;
+    /*margin-top: 5%;*/
     text-transform: uppercase;
     letter-spacing: 4px;
 }
