--- a/myproject/metal/static/public/css/style.css
+++ b/myproject/metal/static/public/css/style.css
@@ -466,7 +466,9 @@ img.img-thumbnail.team-img {
 /* Contact Section */
 #contact {
 	padding: 120px 0 40px 0;
-	background: #f6f6f6;
+	background: url(../img/testimonials-bg.jpg);
+	/*background: #f6f6f6;*/
+	color: #ffffff;
 }
 #contact .contact-item {
 	padding: 10px;
@@ -474,10 +476,14 @@ img.img-thumbnail.team-img {
 	height: 100px;
 	border-radius: 4px;
 }
+#contact h2 {
+	color: #ffffff;
+}
 #contact h3 {
 	font-size: 20px;
 	font-weight: 400;
 	margin-top: 40px;
+	color: #ffffff;
 }
 #contact form {
 	padding: 30px 0;
