--- a/myproject/metal/templates/public/index.html
+++ b/myproject/metal/templates/public/index.html
@@ -751,30 +751,31 @@
             </div>
             <div class="clearfix"></div>
         </div>
-        <div class="col-md-8 col-md-offset-2">
+        <div id="contactFormContainer" class="col-md-8 col-md-offset-2">
             <h3>Leave us a message</h3>
-            <form name="sentMessage" id="contactForm" novalidate>
+            <form name="sentMessage" id="contactForm" novalidate action="{% url 'public_email' %}">
+                {% csrf_token %}
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                            <p class="help-block text-danger"></p>
+                            <input type="text" name="name" id="txt_name" class="form-control" placeholder="Name" required="required">
+                            <p id="name_required" class="help-block text-danger">Required</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                            <p class="help-block text-danger"></p>
+                            <input type="email" name="email" id="txt_email" class="form-control" placeholder="Email" required="required">
+                            <p id="email_required" class="help-block text-danger">Required</p>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message"
+                    <textarea name="message" name="message" id="txt_message" class="form-control" rows="4" placeholder="Message"
                               required></textarea>
-                    <p class="help-block text-danger"></p>
+                    <p id="message_required" class="help-block text-danger">Required</p>
                 </div>
                 <div id="success"></div>
-                <button type="submit" id="btnMessage" class="btn btn-default">Send Message</button>
+                <button type="button" id="btnMessage" class="btn btn-default">Send Message</button>
             </form>
             <div class="social">
                 <h3>Follow us</h3>
@@ -805,6 +806,7 @@
 <script type="text/javascript" src="/..{% static 'public' %}/js/jquery.isotope.js"></script>
 <script type="text/javascript" src="/..{% static 'public' %}/js/jquery.parallax.js"></script>
 <script type="text/javascript" src="/..{% static 'public' %}/js/jqBootstrapValidation.js"></script>
+<script type="text/javascript" src="/..{% static 'public' %}/js/send_message.js"></script>
 <!-- <script type="text/javascript" src="/..{% static 'public' %}/js/contact_me.js"></script>-->
 
 <!-- Javascripts
