--- a/myproject/metal/templates/public/index.html
+++ b/myproject/metal/templates/public/index.html
@@ -692,7 +692,8 @@
                      style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px);">
                     <div class="portfolio-item">
                         <div class="hover-bg">
-                            <a href="/../static/public/img/services/Logistics_Loading_Unloading.jpg" title="Loading & Unloading"
+                            <a href="/../static/public/img/services/Logistics_Loading_Unloading.jpg"
+                               title="Loading & Unloading"
                                rel="prettyPhoto">
                                 <div class="hover-text">
                                     <h4>Logistics</h4>
@@ -728,25 +729,25 @@
         <div class="section-title center">
             <h2>Contact us</h2>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh
-                ante facilisis.</p>
+            <p>Please feel free to contact us using the channels below.</p>
         </div>
         <div class="col-md-8 col-md-offset-2">
             <div class="col-md-4">
                 <div class="contact-item"><i class="fa fa-map-marker fa-2x"></i>
-                    <p>4321 California St,<br>
-                        San Francisco, CA 12345</p>
+                    <p>6 Kian Teck Cres
+                        <br>
+                        Singapore 628873
+                    </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="contact-item"><i class="fa fa-envelope-o fa-2x"></i>
-                    <p>info@company.com</p>
+                    <p>info@metalpolis.com</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="contact-item"><i class="fa fa-phone fa-2x"></i>
-                    <p> +1 123 456 1234<br>
-                        +1 321 456 1234</p>
+                    <p> +65 97376159</p>
                 </div>
             </div>
             <div class="clearfix"></div>
@@ -758,19 +759,22 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" name="name" id="txt_name" class="form-control" placeholder="Name" required="required">
+                            <input type="text" name="name" id="txt_name" class="form-control" placeholder="Name"
+                                   required="required">
                             <p id="name_required" class="help-block text-danger">Required</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="email" name="email" id="txt_email" class="form-control" placeholder="Email" required="required">
+                            <input type="email" name="email" id="txt_email" class="form-control" placeholder="Email"
+                                   required="required">
                             <p id="email_required" class="help-block text-danger">Required</p>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <textarea name="message" name="message" id="txt_message" class="form-control" rows="4" placeholder="Message"
+                    <textarea name="message" name="message" id="txt_message" class="form-control" rows="4"
+                              placeholder="Message"
                               required></textarea>
                     <p id="message_required" class="help-block text-danger">Required</p>
                 </div>
@@ -793,7 +797,7 @@
 </div>
 <div id="footer">
     <div class="container">
-{#        <p>Copyright &copy; Modus. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>#}
+        {#        <p>Copyright &copy; Modus. Designed by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>#}
     </div>
 </div>
 
