--- a/myproject/metal/templates/public/index.html
+++ b/myproject/metal/templates/public/index.html
@@ -769,6 +769,7 @@
                             <input type="email" name="email" id="txt_email" class="form-control" placeholder="Email"
                                    required="required">
                             <p id="email_required" class="help-block text-danger">Required</p>
+                            <p id="email_format_required" class="help-block text-danger">Invalid Email.</p>
                         </div>
                     </div>
                 </div>
