notification table initial checkin removed un-used imports in public_view.py change text for sign-up

--- a/myproject/metal/templates/public/index.html
+++ b/myproject/metal/templates/public/index.html
@@ -113,7 +113,9 @@
                             <input id="btnSigIn" type="submit" value="Sign In" class="btn btn-success btn-sm"/>
                             <br/><br/>
                             <a href="{% url 'register_user_index' %}" class="btn btn-info btn-sm"
-                               style="color: white !important; width: 100%">Sign-up</a>
+                               style="color: white !important; width: 100%">
+                                SIGN-UP
+                            </a>
                             <!--{% if form.errors %}
                       <div class="alert alert-error">
                         <h4>Please fix the following errors</h4>
